# University-System-OOP

./: CMakeLists.txt  Course.cpp  Course.h  Department.cpp  Department.h  Employee.cpp  Employee.h  Faculty.cpp  Faculty.h  Instructor.cpp  Instructor.h  Manager.cpp  Manager.h  Person.cpp  Person.h  Student.cpp  Student.h  University.cpp  University.h  main.cpp
files/: coursesFile.txt  department.txt  employee.txt  faculties.txt  instructor.txt  students.txt
